@@ -24,170 +24,127 @@ public class Archives {
 	private static final String ARCHIVES = "Archives";
 	static File file_object = new File(ARCHIVESTXT);
 
-	public static ArrayList<String> arcStorageDate;
-	public static ArrayList<ArchivesTracker> arcStorageContent;
-	public static LinkedList<String> arcModDateSeq;
-	static int counter = 0; // for arcModDateSeq
-	static int maxCounter = 0; // for arcModDateSeq
+	public static ArrayList<String> arcStorageContent;
+	public static LinkedList<Integer> counterSize;
+	static int counter = 0;
+	static int maxCounter = 0;
+	static int initialArcSize;
+	static int counterSizeIndex = 0;
+
+	public static LinkedList<Integer> ZorO;
+	static int cmdCounter = 0; // for track
+	static int cmdMaxCounter = 0; // for track
 
 	public Archives() {
-		arcStorageDate = new ArrayList<String>();
-		arcStorageContent = new ArrayList<ArchivesTracker>();
-		arcModDateSeq = new LinkedList<String>();
+		arcStorageContent = new ArrayList<String>();
+		counterSize = new LinkedList<Integer>();
 		loadArchives();
+		ZorO = new LinkedList<Integer>();
 	}
 
 	public void loadArchives() {
-		ArrayList<String> temp = new ArrayList<String>();
 
-		if (!file_object.exists()) {
-			ArrayList<String> initialArc = new ArrayList<>();
-			(new FileAccessor(ARCHIVESTXT, initialArc)).writeContents();
-			System.out.println("executed");
-		} else if (file_object.exists()) {
+		// Read contents from file into storageContent
+		arcStorageContent = (new FileAccessor(ARCHIVESTXT)).readContents();
+		System.out.println("Archive size" + arcStorageContent.size());
+		counter += arcStorageContent.size();
+		maxCounter = counter;
+		initialArcSize = arcStorageContent.size();
 
-			String date = "";
-
-			// Read contents from file into storageContent
-			ArrayList<String> currArc = new ArrayList<>();
-			currArc = (new FileAccessor(ARCHIVESTXT)).readContents();
-			System.out.println("Archive size"+currArc.size());
-
-			for (int i = 0; i < currArc.size(); i++) {
-
-				// issues with readfile and write file numbering
-				String chkdate = currArc.get(i).split(" ", 2)[1];
-				boolean check;
-
-				// check if if task or date
-				if (chkdate.length() != 6) {
-					check = false;
-				} else {
-					check = new IsValidDate(chkdate).testValidDate();
-				}
-
-				// sort into arcStorageDate or arcStorageContent
-				if (check) {
-					arcStorageDate.add(currArc.get(i));
-					date = currArc.get(i);
-					temp.clear();
-					if (temp.size() != 0) {
-						// records previously archived task
-						arcStorageContent.add(new ArchivesTracker(date, temp));
-					}
-
-				} else {
-					temp.add(currArc.get(i));
-				}
-
-				// Add final date of archived task
-				arcStorageContent.add(new ArchivesTracker(date, temp));
-
-			}
-		}
 	}
 
 	public void clear() {
-		for (int i = 0; i < arcStorageContent.size(); i++) {
-			arcStorageContent.get(i).clearArcALR();
-		}
-		while (arcModDateSeq.size() != counter) {
-			arcModDateSeq.removeLast();
+
+		// System.out.println("Clear= " + counter);
+		while (arcStorageContent.size() != counter) {
+			arcStorageContent.remove(arcStorageContent.size() - 1);
 		}
 		maxCounter = counter;
+		cmdMaxCounter = cmdCounter;
 		// System.out.println("cleared history");
 	}
 
-	public static void addDoneTask(String date, ArrayList<String> task) {
-		int index = -1;
-		for (int i = 0; i < arcStorageDate.size(); i++) {
-			if (arcStorageDate.get(i).equals(date)) {
-				index = i;
-				break;
-			}
-		}
+	public static void addOneDoneTask(String date, String task) {
+		System.out.println(date + " " + task);
+		arcStorageContent.add(date + " " + task);
+		counter++;
+		maxCounter = counter;
+		counterSize.add(1);
+		counterSizeIndex = counterSize.size();
 
-		// -1 > creates a new position to store the archived task
-		if (index == -1) {
-			System.out.println("from done to archive: "+task.size());
-			arcStorageDate.add(date);
-			arcStorageContent.add(new ArchivesTracker(date, new ArrayList<String>()));
-			arcStorageContent.get(arcStorageContent.size()-1).recordNewTask(task);
-			System.out.println("generating new date");
+	}
 
-		} else {
-			arcStorageContent.get(index).recordNewTask(task);
-			arcModDateSeq.add(date);
-			counter++;
-			maxCounter = counter;
-			System.out.println("date found");
+	public static void addAllDoneTask(String date, ArrayList<String> task) {
+		for (int i = 0; i < task.size(); i++) {
+			System.out.println(date + " " + task.get(i));
+			arcStorageContent.add(date + " " + task.get(i));
 		}
+		counter += task.size();
+		maxCounter = counter;
+		counterSize.add(task.size());
+		counterSizeIndex = counterSize.size();
 	}
 
 	public static void undo() {
 
-		int index = -1;
-		if (counter - 1 < 0) {
-			// System.out.println("max undo");
+		if (counter - 1 > initialArcSize) {
+			counter -= counterSize.get(counterSizeIndex - 1);
+			counterSizeIndex--;
 
 		} else {
-			String date = arcModDateSeq.get(counter - 1);
-
-			for (int i = 0; i < arcStorageDate.size(); i++) {
-				if (arcStorageDate.get(i).equals(date)) {
-					index = i;
-					break;
-				}
-			}
-
-			if (index != -1) {
-				arcStorageContent.get(index).runUndo();
-				counter--;
-			}
-
-			// System.out.println(index);
-
+			// System.out.println("max undo");
 		}
 
 	}
 
 	public static void redo() {
-		int index = -1;
-		if (counter + 1 > maxCounter) {
-			// System.out.println("max redo");
-			WarningPopUp.infoBox("Nothing to Redo", "WARNING");
+
+		if (counter < maxCounter) {
+			counter += counterSize.get(counterSizeIndex);
+			counterSizeIndex++;
 
 		} else {
-			String date = arcModDateSeq.get(counter);
-
-			for (int i = 0; i < arcStorageDate.size(); i++) {
-				if (arcStorageDate.get(i).equals(date)) {
-					index = i;
-					break;
-				}
-			}
-			if (index != -1) {
-				arcStorageContent.get(index).runRedo();
-				counter++;
-			}
-			// System.out.println(index);
-
+			// System.out.println("max redo");
 		}
 
 	}
 
 	// write all data from arcStorageContent into text file
 	public void saveArchives() {
-		ArrayList<String> arcAll = new ArrayList<String>();
 		ArrayList<String> arcTemp = new ArrayList<String>();
-		for (int i = 0; i < arcStorageContent.size(); i++) {
-			arcTemp = arcStorageContent.get(i).getarcAL();
-			arcAll.add(arcStorageContent.get(i).getDate()); 
-			for (int j = 0; j < arcTemp.size(); j++) {
-				arcAll.add(arcTemp.get(j));
-			}
+		for (int i = 0; i < arcStorageContent.size() && i < counter; i++) {
+			System.out.println(arcStorageContent.get(i));
+			arcTemp.add(arcStorageContent.get(i));
 		}
-		new FileAccessor(ARCHIVESTXT,arcAll).writeContents();
+		new FileAccessor(ARCHIVESTXT, arcTemp).writeContents();
+	}
+
+	public void cmdTAECD(String cmd) {
+		if (cmd.equals("add") || cmd.equals("edit") || cmd.equals("copy")) {
+			ZorO.add(0);
+			cmdCounter++;
+			cmdMaxCounter = cmdCounter;
+		} else if (cmd.equals("done")) {
+			ZorO.add(1);
+			cmdCounter++;
+			cmdMaxCounter = cmdCounter;
+		}
+	}
+
+	public void executeCmd(int num) {
+		if (num == -1 && cmdCounter > 0) {
+			cmdCounter += num;
+			if (ZorO.get(cmdCounter - 1) == 1) {
+				undo();
+			}
+
+		} else if (num == 1 && cmdCounter < cmdMaxCounter) {
+			cmdCounter += num;
+			if (ZorO.get(cmdCounter - 1) == 1) {
+				redo();
+			}
+
+		}
 	}
 
 }
